--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: contacts
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1
-Date: 2016-06-21
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Title: Handling, Visualisation and Analysis of Epidemiological Contacts
+Version: 1.0.0
+Date: 2016-06-30
+Authors@R: c(person("Thibaut", "Jombart", email = "thibautjombart@gmail.com", role = c("aut", "cre")),
+	     person("First", "Last", email = "first.last@example.com", role = c("aut")))
+Description: A collection of tools for representing epidemiological contact data, composed of case line lists and contacts between cases. Also contains procedures for data handling, interactive graphics, and statistics.
+License: GPL (>=2)
 LazyData: TRUE
 RoxygenNote: 5.0.1
 Suggests: testthat
