--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,5 @@ Description: A collection of tools for representing epidemiological contact data
 License: GPL (>=2)
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Suggests: testthat
+Suggests: testthat,
+    covr
