adding get_pairwise function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ S3method(print,epi_contacts)
 S3method(summary,epi_contacts)
 export(get_degree)
 export(get_id)
+export(get_pairwise)
 export(make_epi_contacts)
