--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Description: A collection of tools for representing epidemiological contact data
 License: GPL (>=2)
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Imports: dplyr
+Imports: dplyr,
+    igraph
 Suggests: testthat,
     covr
