--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("[",epi_contacts)
 S3method(print,epi_contacts)
 S3method(summary,epi_contacts)
+export(as.igraph.epi_contacts)
 export(get_degree)
 export(get_id)
 export(make_epi_contacts)
