--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,11 +9,4 @@ Description: A collection of tools for representing epidemiological contact data
 License: GPL (>=2)
 LazyData: TRUE
 RoxygenNote: 5.0.1
-<<<<<<< HEAD
-Imports: dplyr, lubridate
-=======
-Imports: dplyr,
-    igraph
->>>>>>> Hackout3/master
-Suggests: testthat,
-    covr
+Imports: dplyr, lubridate, dplyr, igraph, testthat, covr
