--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 S3method("[",epi_contacts)
 S3method(print,epi_contacts)
 S3method(print,summary_epi_contacts)
+S3method(subset,clusters.epi_contacts)
 S3method(summary,epi_contacts)
 export(as.igraph.epi_contacts)
+export(cluster.summary.igraph)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
