edit cluster and igraph functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(cluster.summary.igraph)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
+export(graph3D)
 export(make_epi_contacts)
 export(vis_epi_contacts)
 importFrom(magrittr,"%>%")
