--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ S3method("[",epi_contacts)
 S3method(plot,epi_contacts)
 S3method(print,epi_contacts)
 S3method(print,summary_epi_contacts)
-S3method(subset,clusters.epi_contacts)
 S3method(summary,epi_contacts)
 export(as.igraph.epi_contacts)
 export(cluster.summary.igraph)
@@ -13,6 +12,8 @@ export(get_id)
 export(get_pairwise)
 export(graph3D)
 export(make_epi_contacts)
+export(subset_clusters_by_nodes)
+export(subset_clusters_by_size)
 export(vis_epi_contacts)
 importFrom(magrittr,"%>%")
 importFrom(visNetwork,visGroups)
