--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,epi_contacts)
 S3method(print,summary_epi_contacts)
 S3method(summary,epi_contacts)
 export(as.igraph.epi_contacts)
+export(factor_subset)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
