--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,4 @@ LazyData: TRUE
 RoxygenNote: 5.0.1
 Imports: grDevices, dplyr, igraph, magrittr, visNetwork, threejs,
     colorspace
-Suggests: testthat, covr, shiny
+Suggests: testthat, covr, shiny, readr
