--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,10 @@ S3method("[",epi_contacts)
 S3method(plot,epi_contacts)
 S3method(print,epi_contacts)
 S3method(print,summary_epi_contacts)
+S3method(subset,epi_contacts)
 S3method(summary,epi_contacts)
 export(as.igraph.epi_contacts)
 export(clusters.epi_contacts)
-export(epi_contacts_subset)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
