--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,7 @@ S3method(print,epi_contacts)
 S3method(print,summary_epi_contacts)
 S3method(summary,epi_contacts)
 export(as.igraph.epi_contacts)
-export(cluster.summary.epi_contacts)
-export(clusters.epi_contacts)
+export(clusters_epi_contacts)
 export(epi_contacts_subset)
 export(get_degree)
 export(get_id)
