renamed 'node' to 'id'; also changed the function name accordingly; still need to rename file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(get_pairwise)
 export(graph3D)
 export(igraph.epi_contacts)
 export(make_epi_contacts)
-export(subset_clusters_by_nodes)
+export(subset_clusters_by_id)
 export(subset_clusters_by_size)
 export(vis_epi_contacts)
 importFrom(magrittr,"%>%")
