change clusters name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ S3method(print,summary_epi_contacts)
 S3method(subset,epi_contacts)
 S3method(summary,epi_contacts)
 export(as.igraph.epi_contacts)
-export(clusters.epi_contacts)
+export(clusters_epi_contacts)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
