Update vignette and change name of function: igraph.epi_contacts instead of as.igraph.epi_contacts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,12 @@ S3method(print,epi_contacts)
 S3method(print,summary_epi_contacts)
 S3method(subset,epi_contacts)
 S3method(summary,epi_contacts)
-export(as.igraph.epi_contacts)
 export(clusters_epi_contacts)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
 export(graph3D)
+export(igraph.epi_contacts)
 export(make_epi_contacts)
 export(subset_clusters_by_nodes)
 export(subset_clusters_by_size)
