--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Handling, Visualisation and Analysis of Epidemiological Contacts
 Version: 1.0.0
 Date: 2016-06-30
-Authors@R: c(person("Thibaut", "Jombart", email = "thibautjombart@gmail.com", role = c("aut", "cre")),
-	     person("Nagraj", "VP", email = "vpnagraj@virginia.edu", role = c("aut")),
+Authors@R: c(person("Nagraj", "VP", email = "vpnagraj@virginia.edu", role = c("aut", "cre")),
+       person("Thibaut", "Jombart", email = "thibautjombart@gmail.com", role = c("aut")),
 	     person("Randhawa", "Nistara", email = "nrandhawa@ucdavis.edu", role = c("aut")),
 	     person("Bertrand", "Sudre", email = "Bertrand.Sudre@ecdc.europa.eu", role = c("aut")),
 	     person("Finlay", "Campbell", email = "f.campbell15@imperial.ac.uk", role = c("aut")),
