--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ S3method(print,epi_contacts)
 S3method(print,summary_epi_contacts)
 S3method(subset,epi_contacts)
 S3method(summary,epi_contacts)
-export(clusters_epi_contacts)
 export(epicontacts_server)
+export(get_clusters)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
