Renamed `igraph.epi_contacts` to `as.igraph.epi_contacts`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,13 @@ S3method(print,epi_contacts)
 S3method(print,summary_epi_contacts)
 S3method(subset,epi_contacts)
 S3method(summary,epi_contacts)
+export(as.igraph.epi_contacts)
 export(epicontacts_server)
 export(get_clusters)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
 export(graph3D)
-export(igraph.epi_contacts)
 export(make_epi_contacts)
 export(subset_clusters_by_id)
 export(subset_clusters_by_size)
