--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,5 @@ LazyData: TRUE
 RoxygenNote: 5.0.1
 Imports: grDevices, dplyr, igraph, magrittr, visNetwork, threejs,
     colorspace
-Suggests: testthat, covr, shiny, readr, knitr, rmarkdown
+Suggests: outbreaks, testthat, covr, shiny, readr, knitr, rmarkdown
 VignetteBuilder: knitr
