--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ cache: packages
 
 warnings_are_errors: false
 
+r_github_packages: reconhub/outbreaks
+
 after_success:
   - Rscript -e 'covr::codecov()'
