--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(graph3D)
 export(make_epi_contacts)
 export(subset_clusters_by_id)
 export(subset_clusters_by_size)
+export(thin)
 export(vis_epi_contacts)
 importFrom(magrittr,"%>%")
