adding tests for plots, but weird stuff happening. test() passes but tests in check() fail - different from ref

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,6 @@ export(subset_clusters_by_size)
 export(thin)
 export(transp)
 export(vis_epicontacts)
+importFrom(graphics,plot)
 importFrom(igraph,as.igraph)
 importFrom(magrittr,"%>%")
