Updated get_clusters() to check for existing cluster columns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,3 +24,4 @@ export(vis_epicontacts)
 importFrom(graphics,plot)
 importFrom(igraph,as.igraph)
 importFrom(magrittr,"%>%")
+importFrom(stats,setNames)
