working but not passing the check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,14 @@ S3method(subset,epicontacts)
 S3method(summary,epicontacts)
 export(cases_pal)
 export(char2col)
+export(codeawesome)
 export(get_clusters)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
 export(graph3D)
 export(make_epicontacts)
+export(pale_pal)
 export(spectral)
 export(subset_clusters_by_id)
 export(subset_clusters_by_size)
