--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,15 +8,15 @@ S3method(print,summary_epicontacts)
 S3method(subset,epicontacts)
 S3method(summary,epicontacts)
 export(cases_pal)
-export(char2col)
 export(codeawesome)
+export(edges_pal)
+export(fac2col)
 export(get_clusters)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
 export(graph3D)
 export(make_epicontacts)
-export(pale_pal)
 export(spectral)
 export(subset_clusters_by_id)
 export(subset_clusters_by_size)
