--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,14 +8,14 @@ Authors@R: c(person("VP", "Nagraj", email = "vpnagraj@virginia.edu", role = c("a
 	     person("Nistara", "Randhawa", email = "nrandhawa@ucdavis.edu", role = c("aut")),
 	     person("Bertrand", "Sudre", email = "Bertrand.Sudre@ecdc.europa.eu", role = c("aut")),
 	     person("Finlay", "Campbell", email = "f.campbell15@imperial.ac.uk", role = c("aut")),
-	     person("Thomas", "Crellen", email = "tc13@sanger.ac.uk", role = c("aut")))
+	     person("Thomas", "Crellen", email = "tc13@sanger.ac.uk", role = c("aut")),
+	     person("Zhian N.", "Kamvar", email = "zkamvar@gmail.com", role = c("aut")))
 Description: A collection of tools for representing epidemiological contact data, composed of case line lists and contacts between cases. Also contains procedures for data handling, interactive graphics, and statistics.
 License: GPL (>=2)
 LazyData: TRUE
-RoxygenNote: 6.0.1.9000
-Imports: grDevices, dplyr, igraph, magrittr, visNetwork, threejs,
-    colorspace
+RoxygenNote: 6.1.0
+Imports: grDevices, dplyr, igraph, visNetwork, threejs, colorspace
 Suggests: outbreaks, testthat, covr, shiny, readr, knitr, rmarkdown
 VignetteBuilder: knitr
-URL: http://www.repidemicsconsortium.org/epicontacts/
-BugReports: http://github.com/reconhub/epicontacts/issues
+URL: https://www.repidemicsconsortium.org/epicontacts/
+BugReports: https://github.com/reconhub/epicontacts/issues
