--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(subset_clusters_by_size)
 export(thin)
 export(transp)
 export(vis_epicontacts)
+export(vis_ggplot)
 importFrom(graphics,plot)
 importFrom(igraph,as.igraph)
 importFrom(stats,setNames)
