now fully documented and passing tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,20 @@ export(thin)
 export(transp)
 export(vis_epicontacts)
 export(vis_ggplot)
+importFrom(ggplot2,aes_string)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_gradient)
+importFrom(ggplot2,scale_color_viridis_d)
+importFrom(ggplot2,scale_fill_viridis_c)
+importFrom(ggplot2,scale_fill_viridis_d)
+importFrom(ggplot2,scale_size)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
 importFrom(graphics,plot)
 importFrom(igraph,as.igraph)
 importFrom(stats,setNames)
