--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,8 @@ License: GPL (>=2)
 LazyData: TRUE
 RoxygenNote: 6.1.1
 Encoding: UTF-8
-Imports: grDevices, dplyr, igraph, visNetwork, threejs, colorspace
-Suggests: outbreaks, testthat, covr, shiny, readr, knitr, rmarkdown, outbreaker, distcrete, epitrix
+Imports: grDevices, dplyr, igraph, visNetwork, threejs, colorspace, ggplot2
+Suggests: outbreaks, testthat, covr, shiny, readr, knitr, rmarkdown, outbreaker, distcrete, epitrix, viridis
 VignetteBuilder: knitr
 URL: https://www.repidemicsconsortium.org/epicontacts/
 BugReports: https://github.com/reconhub/epicontacts/issues
