--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(thin)
 export(transp)
 export(vis_epicontacts)
 export(vis_ggplot)
+export(vis_ttree)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,geom_point)
@@ -38,6 +39,7 @@ importFrom(ggplot2,scale_size)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,unit)
 importFrom(graphics,plot)
 importFrom(igraph,as.igraph)
 importFrom(stats,setNames)
