--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: A collection of tools for representing epidemiological contact data
 License: GPL (>=2)
 LazyData: TRUE
 RoxygenNote: 6.1.1
-Imports: grDevices, dplyr, igraph, visNetwork, threejs, colorspace
+Imports: grDevices, dplyr, igraph, visNetwork, threejs, colorspace, methods
 Suggests: outbreaks, testthat, covr, shiny, readr, knitr, rmarkdown
 VignetteBuilder: knitr
 URL: https://www.repidemicsconsortium.org/epicontacts/
