--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,10 +29,17 @@ importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_continuous)
 importFrom(ggplot2,scale_color_gradient)
+importFrom(ggplot2,scale_color_gradientn)
+importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_color_viridis_d)
+importFrom(ggplot2,scale_fill_continuous)
+importFrom(ggplot2,scale_fill_gradientn)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_fill_viridis_c)
 importFrom(ggplot2,scale_fill_viridis_d)
 importFrom(ggplot2,scale_size)
