renamed temporal plotting functions for consistency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,9 +23,10 @@ export(subset_clusters_by_size)
 export(thin)
 export(transp)
 export(vis_epicontacts)
-export(vis_ggplot)
-export(vis_ttree)
+export(vis_temporal_interactive)
+export(vis_temporal_static)
 importFrom(ggplot2,aes_string)
+importFrom(ggplot2,arrow)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_segment)
