--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_clusters)
 export(get_degree)
 export(get_id)
 export(get_pairwise)
+export(get_path)
 export(graph3D)
 export(make_epicontacts)
 export(spectral)
