--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Handling, Visualisation and Analysis of Epidemiological Contacts
 Version: 1.1.2
 Date: 2021-10-19
-Authors@R: c(person("Finlay", "Campbell", email = "f.campbell15@imperial.ac.uk", role = c("aut", "cre")),
+Authors@R: c(person("Finlay", "Campbell", email = "finlaycampbell93@gmail.com", role = c("aut", "cre")),
        	     person("Thibaut", "Jombart", email = "thibautjombart@gmail.com", role = c("aut")),
 	     person("Nistara", "Randhawa", email = "nrandhawa@ucdavis.edu", role = c("aut")),
 	     person("Bertrand", "Sudre", email = "Bertrand.Sudre@ecdc.europa.eu", role = c("aut")),
