--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,5 +16,5 @@ RoxygenNote: 7.1.2
 Imports: grDevices, dplyr, igraph, visNetwork, threejs, colorspace, methods
 Suggests: outbreaks, testthat, covr, shiny, readr, knitr, rmarkdown
 VignetteBuilder: knitr
-URL: https://www.repidemicsconsortium.org/epicontacts/
+URL: https://www.repidemicsconsortium.org/epicontacts/, https://github.com/reconhub/epicontacts/
 BugReports: https://github.com/reconhub/epicontacts/issues
